--- a/package.json
+++ b/package.json
@@ -16,12 +16,19 @@
     "eslint": "npx projen eslint",
     "package": "npx projen package",
     "package-all": "npx projen package-all",
+    "package:dotnet": "npx projen package:dotnet",
     "package:js": "npx projen package:js",
     "package:python": "npx projen package:python",
     "post-compile": "npx projen post-compile",
     "post-upgrade": "npx projen post-upgrade",
     "pre-compile": "npx projen pre-compile",
     "release": "npx projen release",
+    "release:0": "npx projen release:0",
+    "release:1": "npx projen release:1",
+    "release:2": "npx projen release:2",
+    "release:3": "npx projen release:3",
+    "release:4": "npx projen release:4",
+    "release:5": "npx projen release:5",
     "test": "npx projen test",
     "test:update": "npx projen test:update",
     "test:watch": "npx projen test:watch",
@@ -116,8 +123,12 @@
     "outdir": "dist",
     "targets": {
       "python": {
-        "distName": "MyDist",
-        "module": "MyModule"
+        "distName": "aymanzahrandist",
+        "module": "aymanzahranmod"
+      },
+      "dotnet": {
+        "namespace": "aymanorg.aymanns",
+        "packageId": "aymanpackage.aymanpackagename"
       }
     },
     "tsc": {
