--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ProjenTest",
+  "name": "aymanzahranpackage",
   "repository": {
     "type": "git",
     "url": "https://github.com/AymanZahran/ProjenTest.git"
